--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,12 @@ section.for_navbar{
     position: relative;
 
 }
+section.section_width{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+}
 section.after_nav_color{
     background-color: rgb(190, 189, 189);
     .after_nav{
